--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ h1 {
 p {
   width: 60vw;
   text-align: left;
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 2;
   color: gray;
 }
@@ -22,7 +22,7 @@ td {
   padding: 16px;
   padding-left: 32px;
   padding-right: 32px;
-  font-size: 1rem;
+  font-size: 1.2rem;
   border: 0.5px solid gray;
 }
 
@@ -69,8 +69,12 @@ a.header-link {
 .banner {
   display: flex;
   justify-content: center;
+}
+.banner-image {
   max-width: 1080px;
   width: 100vw;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 .container {
@@ -155,7 +159,7 @@ a.header-link {
 }
 
 .news-date {
-  font-size: 0.8rem;
+  font-size: 1rem;
   min-width: 280px;
   max-width: 640px;
   width: 320px;
@@ -186,7 +190,13 @@ a.header-link {
     padding: 4px;
     font-size: 0.8rem;
   }
-
+  .speakers-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .speakers-mobile {
+    width: 100vw;
+  }
  }
 
  @media screen and (min-width: 768px) { 
@@ -194,11 +204,32 @@ a.header-link {
     margin: 16px;
     font-size: 1rem;
   }
+  .speakers-container {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr)
+  }
+  .speakers-mobile {
+    width: 25vw;
+  }
  }
 
  @media screen and (width: 280px) { 
   li {
     margin: 0px;
     font-size: 0.5rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  .news-container {
+    width: 250px;
+    overflow: auto;
+  }
+  .news-subject {
+    font-size: 1.5rem;
+  }
+  .news-content {
+    font-size: 1rem;
   }
  }
